Fix deprecated primitive wrapper constructors in Foundation modules