@@ -123,7 +123,7 @@ public class EgovTableIdGnrServiceImpl extends AbstractDataBlockIdGnrService {
     	if (useBigDecimals) {
 	   		initId = new BigDecimal(blockSize);
     	} else {
-    		initId = new Long(blockSize);
+    		initId = Long.valueOf(blockSize);
     	}
     	jdbcTemplate.update(insertQuery, initId);
     	return initId;
@@ -137,7 +137,7 @@ public class EgovTableIdGnrServiceImpl extends AbstractDataBlockIdGnrService {
      * @throws FdlException ID생성을 위한 블럭 할당이 불가능할때
      */
 	private Object allocateIdBlock(final int blockSize, final boolean useBigDecimals) throws FdlException {
-		LOGGER.debug(messageSource.getMessage("debug.idgnr.allocate.idblock", new Object[] { new Integer(blockSize), tableName }, Locale.getDefault()));
+		LOGGER.debug(messageSource.getMessage("debug.idgnr.allocate.idblock", new Object[] { Integer.valueOf(blockSize), tableName }, Locale.getDefault()));
 		try {
 			return transactionTemplate.execute(new TransactionCallback<Object>() {
 				@SuppressWarnings("deprecation")
@@ -168,7 +168,7 @@ public class EgovTableIdGnrServiceImpl extends AbstractDataBlockIdGnrService {
 							if ((Long) nextId == -1L) { // no row
 								insertInitId(useBigDecimals, blockSize);
 
-								return new Long(0);
+								return Long.valueOf(0);
 							}
 						}
 					} catch (DataAccessException dae) {
@@ -184,7 +184,7 @@ public class EgovTableIdGnrServiceImpl extends AbstractDataBlockIdGnrService {
 						if (useBigDecimals) {
 							newNextId = ((BigDecimal) nextId).add(new BigDecimal(blockSize));
 						} else {
-							newNextId = new Long(((Long) nextId).longValue() + blockSize);
+							newNextId = Long.valueOf(((Long) nextId).longValue() + blockSize);
 						}
 
 						jdbcTemplate.update(updateQuery, newNextId, tableName);
